Step 22: Plan enforcement (policy, gates, tests, harness, docs) (#28)
* Step 22: plan enforcement core (policy, gate, RFC7807, OpenAPI)

* Step 22: tests for plan enforcement and referrals

* Step 22: harness, docs, workspace plumbing

* chore: fix husky pre-commit to run repo scripts (workspaces-safe)

* chore: ignore local sentinel/contract logs

* chore: make husky prepare explicit (husky install)

* fix(problem): do not leak error.message in Problem+JSON detail

* feat(step22): enforce plan gates, soft limits, and device limits (RFC7807)

* chore: update referrals dev harness

* chore: align packages for step22 plan enforcement

* chore(lint): sync lockfile so typescript-eslint is installed

* fix(ci): make @lokaltreu/types test script ignore --coverage

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,10 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:plan": "node -e \"console.log('test:plan: skip web')\"",
+    "test:plan:file": "node -e \"console.log('test:plan:file: skip web')\""
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "husky": "^9.1.7",
+    "libsodium-wrappers": "^0.7.15",
     "next": "15.5.9",
     "postcss": "^8.5.6",
     "react": "19.1.0",
