--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest run",
+    "test:plan": "vitest run tests/plan",
+    "test:plan:file": "vitest run",
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint .",
-    "dev": "node --loader ts-node/esm --watch src/index.ts"
+    "dev": "node --loader ts-node/esm --watch src/index.ts",
+    "dev:harness:referrals": "node --import \"data:text/javascript,import { register } from 'node:module'; import { pathToFileURL } from 'node:url'; register('ts-node/esm', pathToFileURL('./'));\" src/dev-referrals-harness.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +18,9 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "@lokaltreu/types": "file:../../packages/types",
     "@upstash/redis": "^1.36.0",
+    "husky": "^9.1.7",
     "jose": "^5.10.0",
     "libsodium-wrappers": "^0.7.15"
   },
