--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,11 +25,14 @@
     "libsodium-wrappers": "^0.7.15"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
     "@vitest/coverage-v8": "^3.2.4",
     "chai": "^4.4.1",
     "chai-openapi-response-validator": "^0.14.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "typescript-eslint": "^8.52.0",
     "vitest": "^3.2.4"
   }
 }
