--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
     "@vitejs/plugin-react": "^5.0.4",
     "@vitest/coverage-v8": "^3.2.4",
     "baseline-browser-mapping": "^2.9.11",
@@ -35,6 +37,7 @@
     "jsdom": "^24.1.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5",
+    "typescript-eslint": "^8.52.0",
     "vitest": "^3.2.4"
   }
 }
