--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -14,5 +14,10 @@
   "dependencies": {
     "husky": "^9.1.7",
     "libsodium-wrappers": "^0.7.15"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
+    "typescript-eslint": "^8.52.0"
   }
 }
