--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,6 +10,9 @@
     "start": "node dist/index.js",
     "lint": "eslint .",
     "dev": "node --loader ts-node/esm --watch src/index.ts",
+    "audit:export:worm": "node --loader ts-node/esm src/jobs/audit-export-worm.ts",
+    "audit:monitor:gap": "node --loader ts-node/esm src/jobs/audit-export-gap-check.ts",
+    "audit:retention:worm": "node --loader ts-node/esm src/jobs/audit-retention-worm.ts",
     "dev:harness:referrals": "node --import \"data:text/javascript,import { register } from 'node:module'; import { pathToFileURL } from 'node:url'; register('ts-node/esm', pathToFileURL('./'));\" src/dev-referrals-harness.ts"
   },
   "keywords": [],
@@ -22,7 +25,8 @@
     "@upstash/redis": "^1.36.0",
     "husky": "^9.1.7",
     "jose": "^5.10.0",
-    "libsodium-wrappers": "^0.7.15"
+    "libsodium-wrappers": "^0.7.15",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.52.0",
