--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "test:plan": "npm --workspaces=false -w apps/api run test:plan",
     "test:plan:file": "npm --workspaces=false -w apps/api run test --",
     "mock:api": "prism mock apps/api/openapi/lokaltreu-openapi-v2.0.yaml -p 4010",
+    "prism:mock": "node ./scripts/prism-mock.mjs",
+    "prism:mock:4012": "set PRISM_PORT=4012&& node ./scripts/prism-mock.mjs",
+    "prism:mock:4013": "set PRISM_PORT=4013&& node ./scripts/prism-mock.mjs",
+    "prism:smoke": "powershell -ExecutionPolicy Bypass -File scripts/prism-smoke.ps1 -StartPrism -Port 4013",
+    "types:gen": "openapi-typescript apps/api/openapi/lokaltreu-openapi-v2.0.yaml -o packages/types/src/index.d.ts",
     "gdpr:docs:present": "test -f docs/compliance/step-18-device-onboarding.md",
     "test": "vitest run",
     "gdpr:dsr": "vitest run tests/security/idempotency.test.ts",
