--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "prism:mock": "node ./scripts/prism-mock.mjs",
     "prism:mock:4012": "set PRISM_PORT=4012&& node ./scripts/prism-mock.mjs",
     "prism:mock:4013": "set PRISM_PORT=4013&& node ./scripts/prism-mock.mjs",
-    "prism:smoke": "powershell -ExecutionPolicy Bypass -File scripts/prism-smoke.ps1 -StartPrism -Port 4013",
+    "prism:smoke": "powershell -NoProfile -ExecutionPolicy Bypass -File scripts/prism-smoke.ps1 -StartPrism -Port 4013",
     "types:gen": "openapi-typescript apps/api/openapi/lokaltreu-openapi-v2.0.yaml -o packages/types/src/index.d.ts",
     "gdpr:docs:present": "test -f docs/compliance/step-18-device-onboarding.md",
     "test": "vitest run",
