--- a/.github/workflows/iac-validate.yml
+++ b/.github/workflows/iac-validate.yml
@@ -1,14 +1,14 @@
-name: IaC Validate (dev)
-
 on:
   push:
     branches: [main]
     paths:
       - "infra/terraform/**"
+      - ".github/workflows/iac-validate.yml"
   pull_request:
     branches: [main]
     paths:
       - "infra/terraform/**"
+      - ".github/workflows/iac-validate.yml"
 
 concurrency:
   group: iac-validate-${{ github.ref }}
