--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,7 @@
     "test:plan:file": "vitest run",
     "build": "tsc",
     "start": "node dist/index.js",
+    "start:test": "PORT=3001 node dist/index.js",
     "lint": "eslint .",
     "dev": "node --loader ts-node/esm --watch src/index.ts",
     "audit:export:worm": "node --loader ts-node/esm src/jobs/audit-export-worm.ts",
