CI: fix security-gates wait-on /health and stop API process

--- a/.github/workflows/security-gates.yml
+++ b/.github/workflows/security-gates.yml
@@ -10,22 +10,32 @@ jobs:
     timeout-minutes: 25
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
-        with: { node-version: 20, cache: npm }
+        with:
+          node-version: 20
+          cache: npm
 
       - name: Install
         run: npm ci
 
+      - name: Build API
+        run: npm run -w apps/api build
+
       - name: Start API (test profile)
-        run: npm run -w apps/api start:test &
+        run: |
+          npm run -w apps/api start:test &
+          echo "API_PID=$!" >> $GITHUB_ENV
+
       - name: Wait for API
         run: npx wait-on http://localhost:3001/health
 
-      - name: Anti-Replay
-        run: npm run test:security:replay
-
-      - name: Device-Proof
-        run: npm run test:security:device-proof
-
       - name: Plan-Gate
-        run: npm run test:security:plan-gate
+        run: npm run -w apps/api test:plan
+
+      - name: Stop API
+        if: always()
+        run: |
+          if [ -n "${API_PID:-}" ]; then
+            kill "$API_PID" || true
+          fi
